2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWExtensions/Resources/Info-gnustep.plist
	delete
	* GSWExtensions/GNUmakefile
	let makefiles generate Info-gnustep.plist

2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWExtensions/Resources/Info-gnustep.plist
	* GSWExtensions/GNUmakefile
	fix framework name to be able to load files from the right bundle

2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.m
	split names into pathExtension and name before feeding it into NSBundle.
	This is not needed on OSX, but on current -base
	
2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.h
	* GSWeb/GSWComponent.h
	disable GS_ATTRIB_DEPRECATED until a solution is found

2010-06-21  David Wetzel <dave@turbocat.de>
	* GSWExtensions/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.gswd
	* GSWExtensions/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.gswd
	* GSWExtensions/GNUmakefile
	* GSWExtensions/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.gswd
	* GSWExtensions/GSWExceptionPage.gswc/GSWExceptionPage.gswd
	use exclamation.png. exclamation.svg is not displayed inline in mozilla 
	due to a bug in mozilla.
	* GSWExtensions/WebServerResources/exclamation.png
	* GSWExtensions/WebServerResources/exclamation.svg
	new file
	* GSWExtensions/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
	* GSWExtensions/GSWExceptionPage.gswc/GSWExceptionPage.html
	better web design
	* GSWeb/GSWApplication.m
	-path
	get path from _resourceManager
	_resetCache
	do not call _clearCache, maybe we should trash the _componentDefinitionCache?
	_finishInitializingSession:
	make empty, still seems to work
	+_applicationClass
	don not use _applicationGSWBundle
	* GSWeb/GSWResourceManager.h
	* GSWeb/GSWResourceManager.m
	major redesign with WO 4.5 docs in mind.
	* GSWeb/GSWImageButton.m
	refactor resourceManager code
	* GSWeb/GSWeb.h
	remove GSWBundle class
	* Testing/DynamicElements